<resources>
    <string name="app_name">GeoShare</string>
    <string name="google_app_id">sixth-cider-120305</string>

    <string name="auth_token_key">edu.txstate.jared.AUTH_TOKEN_KEY</string>


    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="newDropButtonText">New Drop</string>
    <string name="messageDropButtonText">Text</string>
    <string name="dropTypePromptText">Select Drop Type:</string>
    <string name="submitButtonText">Submit</string>
    <string name="title_activity_maps">Map</string>

    <string name="loginString">Login</string>
    <string name="emailText">Email</string>
    <string name="pwdLabel">Password</string>
    <string name="registerButtonLabel">REGISTER</string>
    <string name="linkToLoginText">Already Registered? Login Here</string>
    <string name="profileButtonText">Profile</string>
    <string name="mapButtonText">Map</string>
    <string name="usernameText">Username</string>
    <string name="latitudeText">Latitude</string>
    <string name="longText">Longitude</string>
    <string name="logoutButtonText">Log Out</string>
    <string name="profileUsername">Username</string>
    <string name="profileEmail">Email</string>
    <string name="dropletListLabel">Droplets:</string>
</resources>
