<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.txstate.jared.menudemo.RegisterActivity"
    android:baselineAligned="false"
    android:background="#cd3c34">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/emailText"
        android:id="@+id/emailLabel"
        android:textColor="#f4f4f4"
        android:layout_margin="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailField"
        android:editable="true"
        android:elegantTextHeight="false"
        android:enabled="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Username"
        android:id="@+id/usernameLabel"
        android:textColor="#ffffff"
        android:layout_margin="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameField" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/pwdLabel"
        android:id="@+id/pwdLabel1"
        android:layout_margin="10dp"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pwdField1"
        android:enabled="true"
        android:editable="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerButtonLabel"
        android:id="@+id/registerButton"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:enabled="true"
        android:clickable="true"
        android:background="#d42727"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/linkToLoginText"
        android:id="@+id/linkToLogin"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:layout_marginTop="15dp"
        android:textColor="#ffffff"
        android:paddingTop="15dp" />

</LinearLayout>
